[gd_scene load_steps=4 format=3 uid="uid://c10mfic5lq45q"]

[ext_resource type="Script" path="res://objects/player/HUD/oxygen_level.gd" id="1_e86li"]
[ext_resource type="Texture2D" uid="uid://bqv8vxdwkuy6a" path="res://objects/player/assets/lungs.png" id="1_hu1wt"]
[ext_resource type="Texture2D" uid="uid://6gg137rgmlb1" path="res://objects/player/assets/oxygen_tank.png" id="2_3tdn3"]

[node name="OxygenLevel" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_e86li")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_right = 110.0
offset_bottom = 67.0
grow_horizontal = 2

[node name="Lungs" type="HBoxContainer" parent="HBox"]
layout_mode = 2

[node name="LungsTexture" type="TextureRect" parent="HBox/Lungs"]
layout_mode = 2
texture = ExtResource("1_hu1wt")

[node name="LungsLabel" type="Label" parent="HBox/Lungs"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "5"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBox/Lungs"]
layout_mode = 2

[node name="Tank" type="HBoxContainer" parent="HBox"]
layout_mode = 2

[node name="TankTexture" type="TextureRect" parent="HBox/Tank"]
layout_mode = 2
texture = ExtResource("2_3tdn3")

[node name="TankLabel" type="Label" parent="HBox/Tank"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "20"
